# lampstand

./: .IMPORT_SOURCE.txt  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lampstand-rpc.yml  validate.yml
contracts/: README.md
contracts/examples/: lampstand.audit-receipt.v0.example.json  lampstand.index-publication.v0.example.json  lampstand.mesh-publication-policy.v0.example.json  lampstand.query.v0.example.json
contracts/schemas/: lampstand.audit-receipt.v0.schema.json  lampstand.index-publication.v0.schema.json  lampstand.mesh-publication-policy.v0.schema.json  lampstand.query.v0.schema.json
docs/: DEPENDENCIES.md  DISTRO_INTEGRATION.md  PROPHET_UNDERSTAND_INDEXING.md  ROADMAP.md  RUNTIME_TRUST_DELTA.md  SOCIOPROFIT_PLATFORM.md  SPEC.md  TRUST_ADDENDUM.md
lampstand/: __init__.py  cli.py  daemon.py  db.py  extract.py  indexer.py  inotify.py  lampstandd.py  paths.py  records.py  scan.py  watcher.py
lampstand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lampstand/rpc/: __init__.py  client.py  context.py  messages.py  runtime.py  service.py  tritrpc.py  unixjson.py
packaging/gnome/: lampstand-search-provider.desktop  lampstand.search-provider.ini
packaging/systemd/user/: lampstandd.service
scripts/: ci.sh
specs/: LOCAL_QUERY_ADAPTER.md
tests/: test_adapter_records.py  test_basic.py  test_local_query_adapter.py
tools/: check_lampstand_contract_schemas.py  index_prophet_understanding.py  smoke_prophet_understanding_index.py
