[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lampstand"
version = "0.0.0"
description = "Prototype desktop indexing/search service (TriTRPC + standard storage aligned)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
lampstand = "lampstand.cli:main"
lampstandd = "lampstand.lampstandd:main"
